# CppConfig

./: CMakeLists.txt  CppConfig.pro  README.md  main.cpp
example/: ConfigExample.cpp  ConfigExample.h  ConfigRootGroup.cpp  ConfigRootGroup.h  ConfigUserGroup.cpp  ConfigUserGroup.h  ConfigUsersGroup.cpp  ConfigUsersGroup.h  example.pri
source/: ConfigBase.cpp  ConfigBase.h  ConfigGroupBase.cpp  ConfigGroupBase.h  source.pri
